# PartsBasedDetector

./: .gitmodules  .travis.yml  CMakeLists.txt  INSTALL  README  README.md  manifest.xml  package.xml  setup.py  stack.xml
cells/: CMakeLists.txt  detect.cpp  module.cpp
conf/: config_detection.by_parts  config_face.by_parts  config_person.by_parts
doc/: Doxyfile.in
include/: Candidate.hpp  DepthConsistency.hpp  DistanceTransform.hpp  DynamicProgram.hpp  FileStorageModel.hpp  FourierConvolutionEngine.hpp  HOGFeatures.hpp  IConvolutionEngine.hpp  IFeatures.hpp  ITree.hpp  Math.hpp  MatioModel.hpp  MatlabIOModel.hpp  Metrics.hpp  Model.hpp  Node.hpp  Part.hpp  Parts.hpp  PartsBasedDetector.hpp  PointCloudClusterer.h  PointCloudClusterer.hpp  Rect3.hpp  SearchSpacePruning.hpp  SpatialConvolutionEngine.hpp  StereoCameraModel.hpp  Visualize.hpp  filterengine.hpp  nms.hpp  types.hpp
launch/: detect.launch  detect_by_kinect.launch  detector.launch
matlab/: LICENSE  README  compile.m  globals.m  isoctave.m  modelTransfer.m  octave-core  training_demo.m
matlab/detection/: bestoverlap.m  detect.m  detect_fast.m  featpyramid.m  nms.m  testmodel.m  testmodel_gtbox.m
matlab/evaluation/: eval_apk.m  eval_pck.m
matlab/learning/: annotateParts.m  buildmodel.m  clusterparts.m  clusterparts_poselet.m  clusterparts_vis.m  croppos.m  data_def.m  fprintflush.m  getNegativeData.m  getPositiveData.m  initmodel.m  k_means.m  map_rotate_points.m  mergemodels.m  model2vec.m  point2box.m  pointtobox.m  qp_one.m  qp_opt.m  qp_prune.m  qp_refresh.m  qp_w.m  qp_write.m  sparse2dense.m  subarray.m  train.m  trainmodel.m  vec2model.m  warppos.m
matlab/mex/: dt.cc  fconv.cc  lincomb.cc  qp_one_sparse.cc  reduce.cc  score.cc
matlab/oct/: resize.cc  shiftdt.cc
matlab/visualization/: showboxes.m  showpartclusters.m  showskeletons.m  visualizeHOG.m  visualizemodel.m  visualizeskeleton.m
python/: CMakeLists.txt
python/object_recognition_by_parts/: __init__.py  detector.py  publisher.py
ros/: CMakeLists.txt  Messages.cpp  Messages.hpp  Node.cpp  Node.hpp  node.cpp  node.hpp  pbd_depthcheck.cpp  pbd_serial.cpp  pbd_serial.hpp
src/: CMakeLists.txt  Candidate.cpp  DepthConsistency.cpp  DynamicProgram.cpp  FileStorageModel.cpp  HOGFeatures.cpp  Math.cpp  MatioModel.cpp  MatlabIOModel.cpp  Model.cpp  ModelTransfer.cpp  Node.cpp  Part.cpp  PartsBasedDetector.cpp  SearchSpacePruning.cpp  SpatialConvolutionEngine.cpp  Visualize.cpp  demo.cpp  filter.cpp  main.cpp  nms.cpp
src/detector/: DynamicProgram.cpp  FileStorageModel.cpp  FourierConvolutionEngine.cpp  HOGFeatures.cpp  Messages.cpp  PartsBasedDetector.cpp  SearchSpacePruning.cpp  StereoCameraModel.cpp  Visualize.cpp
test/: CMakeLists.txt
